# audio-level-fixer

./: .gitignore  AudioEngine.cpp  AudioEngine.h  AudioProcessor.iss  CMakeLists.txt  Compressor.cpp  Compressor.h  Default.preset  LICENSE.txt  Limiter.cpp  Limiter.h  Main.cpp  MainComponent.cpp  MainComponent.h  Podcast.preset  README.md  SlammedUp.preset  Streaming.preset  VirtualAudioDevice.cpp  VirtualAudioDevice.h  VirtualAudioDevice_Linux.cpp  VirtualAudioDevice_Linux.h  VoiceOver.preset  build_installer.bat  build_linux.sh  build_macos.sh  build_windows.bat  check_setup.bat  install.sh  sign_installer.bat  simple_test.bat  test_application.cpp  test_build.sh  test_installer.bat
.github/workflows/: build.yml  master-build.yml
docs/: Audio Processing App Requirements Analysis.md  Audio Processing Application - Implementation Summary.md  Audio Processing Application Technical Specification.md  Audio Processor - Project Completion Summary.md  Audio Processor - Quick Start Guide.md  Audio Processor - Single Download Complete Guide.md  Audio Processor - Single Package Installation.md  Audio Processor - Windows Installer Complete Guide.md  Audio Processor - Windows Installer.md  Audio Processor User Manual.md  Audio Processor.md  Virtual Audio Driver Implementation Research.md  Windows Installer Research - Audio Processor.md  todo.md
